syntax = "proto3";
option  go_package = "github.com/flasherup/gradtage.de/autocompletesvc/acrpc;acrpc";

package acrpc;


message Source {
    string ID = 1;
    string SourceID = 2;
    double Latitude = 3;
    double Longitude = 4;
    string Source = 5;
    string Reports = 6;
    string ISO2Country = 7;
    string ISO3Country = 8;
    string Prio = 9;
    string CityNameEnglish = 10;
    string CityNameNative = 11;
    string CountryNameEnglish = 12;
    string CountryNameNative = 13;
    string ICAO = 14;
    string WMO = 15;
    string CWOP = 16;
    string Maslib = 17;
    string National_ID = 18;
    string IATA = 19;
    string USAF_WBAN = 20;
    string GHCN = 21;
    string NWSLI = 22;
    double Elevation = 23;
}

message Sources {
    repeated Source sources = 1;
}

message GetAutocompleteRequest {
    string text = 1;
}

message GetAutocompleteResponse {
    map<string, Sources> result = 1;
    string err = 2;
}

message AddSourcesRequest {
    repeated Source sources = 1;
}

message AddSourcesResponse {
    string err = 1;
}

message ResetSourcesRequest {
    repeated Source sources = 1;
}

message ResetSourcesResponse {
    string err = 1;
}

service AutocompleteSVC {
    rpc GetAutocomplete(GetAutocompleteRequest) returns (GetAutocompleteResponse) {}
    rpc AddSources(AddSourcesRequest) returns (AddSourcesResponse) {}
    rpc ResetSources(ResetSourcesRequest) returns (ResetSourcesResponse) {}
}


